fix: changed tsconfig and package json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,19 @@
 {
     "compilerOptions": {
         "strict": true,
-    }
+        "outDir": "dist",
+        "rootDir": ".",
+        "allowSyntheticDefaultImports": true,
+        "baseUrl": "./src",
+        "target": "esnext",
+        "module": "esnext",
+        "moduleResolution": "node",
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "skipLibCheck": true,
+        "resolveJsonModule": true,
+        "types": ["node"]
+    },
+    "include": ["src"],
+    "exclude": ["node_modules", "dist"]
 }
