--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/main.ts",
+    "build": "tsc",
+    "start:dev": "ts-node src/main.ts",
+    "start": "node dist/main.js",
     "production": "dist src/main.js"
   },
   "keywords": [],
