fixed npm build and start

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "build": "tsc",
     "start:dev": "ts-node src/main.ts",
-    "start": "node dist/main.js",
-    "production": "dist src/main.js"
+    "start": "node dist/src/main.js"
   },
   "keywords": [],
   "author": "",
