--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: Node.js CI/CD
+name: node-ci-workflow
 
 on:
   push:
@@ -23,16 +23,3 @@ jobs:
       - name: Build project
         run: npm run build
 
-        # Deploy flow
-      - name: Deploy to EC2
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          port: 22
-          script: |
-            cd ~/testbot
-            git pull
-            npm install
-            npm run build
